# PyGuymer3

./: .editorconfig  .gitignore  .gitmodules  .mypy.ini  .pylint.ini  .pylintrc  .readthedocs.yaml  .shellcheckrc  DEVELOP.md  MANIFEST.in  Makefile  OSGBpoints2WGSpolygon.py  README.md  __init__.py  add_map_background.py  buffer.py  buffer_multipolygon.py  buffer_point.py  buffer_point_crudely.py  buffer_points.py  buffer_polygon.py  calc_angle_between_two_locs.py  calc_dist_between_two_locs.py  calc_loc_from_loc_and_bearing_and_dist.py  colourTables.py  convert_bytes_to_pretty_bytes.py  convert_pretty_bytes_to_bytes.py  convert_spreadsheet_to_datetime.py  convert_spreadsheet_to_unix.py  does_FLAC_have_padding.py  does_MP4_have_free.py  does_media_have_RTP_hints.py  dot2png.py  download.py  download_file.py  download_header.py  download_stream.py  download_text.py  en2ll.py  exiftool.py  (+88 more)
.github/: FUNDING.yml
CLPI/: README.md  __init__.py  load_ATCSequence.py  load_CPI.py  load_ClipInfo.py  load_ClipMark.py  load_ExtensionData.py  load_ProgramInfo.py  load_STCSequence.py  load_SequenceInfo.py  load_StreamCodingInfo.py  load_TSTypeInfoBlock.py  load_header.py
MPLS/: README.md  __init__.py  load_AppInfoPlayList.py  load_ExtensionData.py  load_PlayItem.py  load_PlayList.py  load_PlayListMark.py  load_STNTable.py  load_StreamAttributes.py  load_StreamEntry.py  load_SubPath.py  load_SubPlayItem.py  load_header.py
bugs/: huge-buffer-bug.py  huge-buffer-bug_nAng=1025.csv  huge-buffer-bug_nAng=129.csv  huge-buffer-bug_nAng=16385.csv  huge-buffer-bug_nAng=17.csv  huge-buffer-bug_nAng=2049.csv  huge-buffer-bug_nAng=257.csv  huge-buffer-bug_nAng=32769.csv  huge-buffer-bug_nAng=33.csv  huge-buffer-bug_nAng=4097.csv  huge-buffer-bug_nAng=513.csv  huge-buffer-bug_nAng=65.csv  huge-buffer-bug_nAng=8193.csv  huge-buffer-bug_nAng=9.csv
docs/: bugs.rst  conf.py  dependencies.rst  index.rst  installation.rst  requirements.txt  test_area.rst  test_buffer.rst  test_bufferPoint.rst  test_fillin.rst  test_findMiddleOfLocs.rst  test_greatCircle.rst  test_mapGshhgUnderlay.rst  test_mapNeUnderlay.rst  test_mapUnderlay.rst  test_saveArrayAsImage.rst  testing.rst  todo.rst
f90/: Makefile  README.md  __init__.py  compile.sh  f90.F90
openstreetmap/: __init__.py  deg2num.py  num2deg.py
pyguymer3/: __ffprobe__.py  __init__.py  __main__.py  _consts.py  buffer_polygon.py  calc_loc_from_loc_and_bearing_and_dist.py  checkSudokuBoard.py  consts.py  convert_bytes_to_pretty_bytes.py  convert_pretty_bytes_to_bytes.py  convert_seconds_to_pretty_time.py  convert_spreadsheet_to_datetime.py  convert_spreadsheet_to_unix.py  does_MP4_have_free.py  download.py  download_file.py  download_header.py  download_stream.py  download_text.py  elem2dict.py  find_instances_of_a_file.py  find_integer_divisors.py  find_middle_of_great_circle.py  find_program_version.py  generate_password.py  generate_random_stub.py  getatime.py  getctime.py  getmtime.py  git_commits.py  git_files.py  git_remote.py  gzip.py  hostname.py  interpolate.py  intersection.py  jpegtran.py  load_EXIF1.py  load_GPS_EXIF1.py  load_GPS_EXIF2.py  (+37 more)
scripts/: README.md  demonstrateGlobeTiles.py  demonstrateGshggTiles.py  demonstrateGshhgTiles.py  demonstrateNeTiles.py  demonstrateOsTerrainTiles.py  generateColourTables.py  generateGlobeNeTiles.py  generateGlobeTiles.py  generateGshhgTiles.py  generateMissingTile.py  generateNeTiles.py  generateOsTerrainTiles.py  generateTiles.sh  plotLimitOfVincenty.py  surveyTiles.csv  surveyTiles.py
tests/: BigBuckBunny.md  README.md  animateBufferPoint.py  animateExpandPoint.py  area.md  area.py  bigBuckBunny.md  buffer.md  buffer.py  buffer0.geojson  buffer1.geojson  buffer2.geojson  buffer3.geojson  buffer4.geojson  buffer5.geojson  buffer6.geojson  buffer7.geojson  buffer8.geojson  bufferPoint.md  bufferPoint.py  bufferPoint0.geojson  bufferPoint1.geojson  bufferPoint2.geojson  earths.py  (+33 more)
(+1046 files in other folders)
